syntax = "proto3";

package skupb;

option go_package = "github.com/xidongc/mongo_ebenchmark/model/sku/skupb";

import "payment/paymentpb/payment.proto";
import "google/api/annotations.proto";

service SkuService {
    rpc New (UpsertRequest) returns (Sku) {
        option (google.api.http) = {
        post: "/sku"
        body: "*"
    };
    }
    rpc Get (GetRequest) returns (Sku) {
        option (google.api.http) = {
        get: "/sku"
        body: "*"
    };
    }
    rpc Delete (DeleteRequest) returns (Empty) {
        option (google.api.http) = {
        delete: "/sku"
        body: "*"
    };
    }
}

message UpsertRequest {
    string name = 1;
    paymentpb.Currency currency = 2;
    bool active = 3;
    string productId = 4;
    uint64 price = 5;
    map<string, string> metadata = 6;
    string image = 7;
    string skuLabel = 8;
    PackageDimensions packageDimensions = 9;
    Inventory inventory = 10;
    map<string, string> attributes = 11;
    bool hasBattery = 12;
    bool hasLiquid = 13;
    bool hasSensitive = 14;
    string description = 15;
    string supplier = 16;
}

message Empty {

}

message GetRequest {
    string name = 1;
}

message DeleteRequest {
    string name = 1;
}

message Sku {
    int64 id = 1;
    string name = 2;
    uint64 price = 3; // dollar
    paymentpb.Currency currency = 4;
    bool active = 5;
    string productId = 6;
    map<string, string> metadata = 7;
    map<string, string> attributes = 8;
    string image = 9;
    PackageDimensions packageDimensions = 10;
    repeated Inventory inventory = 11;
    bool hasBattery = 12;
    bool hasLiquid = 13;
    bool hasSensitive = 14;
    string description = 15;
    string skuLabel = 16;
    string supplier = 17;

    int64 created = 998;
    int64 updated = 999;
}

message Inventory {
    int64 skuId = 1;
    int64 warehouseId = 2;
    int64 quantity = 3; // available quantity
    Type type = 4;
    enum Type {
        Infinite = 0;
        Finite = 1;
    }
}

message PackageDimensions {
    double height = 1;
    double length = 2;
    double weight = 3;
    double width = 4;
}

